Bug 387130 - Confusion in the selection of filters
Summary: Confusion in the selection of filters
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks: 386036
  Show dependency treegraph
 
Reported: 2017-11-19 21:36 UTC by Robby Stephenson
Modified: 2017-11-29 17:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2017-11-19 21:36:00 UTC
Splitting from Bug 386036:

Process to reproduce:
a) Open the attached xml file
b) In the list of filters, select "Disney"
c) Only "Cinderella" is displayed on the list of entries on the right-hand side (which is correct)
d) De-select "Disney" as a filter, by Ctrl+Clicking on "Disney" on the filter list - now, no filters are selected any longer
e) However, the list of entries on the right-hand side still only shows "Cinderella" (which is no longer correct - I think...) - please see attached picture.
f) Now click on "Disney" in the filter list again, so that's it's selected once again (please bear with me - this is to show something else in the following steps)
g) The list still only shows "Cinderella" (which is correct again)
h) Now click on the black arrow with a cross inside in the field next to the "Filter" button at the top
i) The list of entries reverts to the complete, unfiltered list of all entries (all two of them...)
j) However, "Disney" is still selected on the filter list
k) Now click on "Disney" in the filter list again
l) The list of entries does not change and still shows two entries

Expected Result:
There are two steps which are not as I would have expected.

At step e), because I have actually removed the filter by Ctrl-clicking on it at step d), I would have expected the list to revert to the list of all (two) entries instead on only "Cinderella". This change in filter selection is not detected as an event and/or taken into account.
Of course step h) is the (or "a") work-around, and I can revert to the complete list of entries and remove the filter by clicking on the black arrow at the top.

At step l), because I've just clicked on "Disney", I would expect the list of entries to show "Cinderella" only, which is the only entry matching the criterion. But because "Disney" was already selected as a filter, as per step j), even though the list of entries displayed was unfiltered, the program is confused, and it doesn't detect the re-selection of "Disney" as a filter, and it doesn't update the list to apply the filter.
The work-around here is to select another filter (e.g. "All Directors"), and re-select "Disney", and it works fine again.
Comment 1 Robby Stephenson 2017-11-29 17:32:40 UTC
Git commit 3596844fad56009d6c8ea7c438c55848c99a716f by Robby Stephenson.
Committed on 19/11/2017 at 21:37.
Pushed by rstephenson into branch 'master'.

Fix filter selection bug

Clear selection in filter view when quick filter is cleared.
Clear applied filter when filter is deselected in filter view.
FIXED-IN: 3.1.1

M  +4    -0    ChangeLog
M  +3    -0    src/controller.cpp
M  +2    -3    src/filterview.cpp

https://commits.kde.org/tellico/3596844fad56009d6c8ea7c438c55848c99a716f