Fix filter selection bug

Clear selection in filter view when quick filter is cleared.
Clear applied filter when filter is deselected in filter view.

BUG: 387130
FIXED-IN: 3.1.1